--- a/sass.html
+++ b/sass.html
@@ -7,5 +7,5 @@
                             # Convert SCSS to Sass
                             $ sass-convert style.scss style.sass
                         </code>
-                    </pre> </div> </div> </article> <footer> <div class="row justify-content-center"> <div class="col-xs-12 col-lg-2"> <img srcset="/author.ac19ea93.jpg 200w,/author_small.ec45f83f.jpg 125w" sizes="(min-width: 576px) 200px,
-                                125px" src="/author_small.ec45f83f.jpg" alt="Foto del autor" class="clip-star"> </div> <div class="col-xs-12 col-lg-4"> <p id="footer-title">Enciclopedia</p> <p id="footer-author">Actividad realizada por Jos&eacute; David Quero S&aacute;nchez</p> </div> </div> </footer> <script type="text/javascript" src="/scripts.4c9b4c48.js"></script> </body></html>
+                    </pre> </div> </div> </article> <footer> <div class="row justify-content-center"> <div class="col-xs-12 col-lg-2"> <img srcset="/author.caa8fca9.webp 200w,/author_small.82c4f359.webp 125w" sizes="(min-width: 576px) 200px,
+                                125px" src="/author_small.82c4f359.webp" alt="Foto del autor" class="clip-star"> </div> <div class="col-xs-12 col-lg-4"> <p id="footer-title">Enciclopedia</p> <p id="footer-author">Actividad realizada por Jos&eacute; David Quero S&aacute;nchez</p> </div> </div> </footer> <script type="text/javascript" src="/scripts.4c9b4c48.js"></script> </body></html>
